<resources>
    <string name="app_name">CarService</string>
    <string name="copyright_show_str">Copyright © 2018 by Jundger.</string>
    <string name="login_str_btn">登&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="forget_psw_tv">忘记密码</string>
    <string name="register_tv">注册账户</string>
    <string name="bottom_tab_main">首页</string>
    <string name="bottom_tab_repair">维修</string>
    <string name="bottom_tab_maintain">保养</string>
    <string name="bottom_tab_mine">我的</string>
    <string name="edit_info_str">编辑个人资料></string>
    <string name="no_data_show">暂无数据</string>
    <string name="default_null_str">---</string>
    <string name="register_user_exist">用户已经存在</string>
    <string name="send_email_fail">验证码发送失败，请稍后重试</string>
    <string name="send_email_success">邮件已发送，请注意查收</string>

    <!--LoginActivity-->
    <string name="phone_not_null">手机号码不能为空</string>
    <string name="phone_form_not_specs">手机号码不符合大陆规范</string>
    <string name="phone_length_not_specs">手机号码长度不符合大陆规范</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="password_not_more_six">密码长度必须大于6位</string>
    <string name="email_format_error">邮箱格式错误</string>

    <!--RegisterActivity-->
    <string name="register_phone_hint">请输入手机号</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_re_password_hint">请再次输入密码</string>
    <string name="register_str_btn">注&#160;&#160;&#160;&#160;&#160;&#160;册</string>

    <!--ForgetPswActivity-->
    <string name="forget_phone_hint">请输入邮箱地址</string>
    <string name="forget_new_psw_hint">请输入新密码</string>
    <string name="forget_repeat_psw_hint">请再次输入新密码</string>
    <string name="forget_code_hint">请输入验证码</string>
    <string name="forget_get_code_hint">获取邮箱验证码</string>
    <string name="forget_next_str_btn">提&#160;&#160;&#160;&#160;&#160;&#160;交</string>

    <!--FeedbackActivity-->
    <string name="feedback_submit_text">提&#160;&#160;&#160;&#160;&#160;&#160;交</string>
    <string name="feedback_edit_hint">请输入您的反馈意见。对于您的意见，我们会第一时间处理（字数500以内）</string>

    <!--MapActivity-->
    <string name="default_location_city">重庆市</string>

    <!--MainPageFragment-->
    <string name="fault_info_str">----故障信息----</string>
    <string name="fault_code_str">故障码：&#160;&#160;&#160;&#160;&#160;</string>
    <string name="component_system_str">部件系统：</string>
    <string name="use_scope_str">适用范围：</string>
    <string name="describe_str">故障描述：</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hint_connect_bluetooth">请选择连接设备</string>
    <string name="hint_scan_bluetooth">正在扫描蓝牙设备……</string>
    <string name="hint_request_open_bluetooth">请打开蓝牙</string>
    <string name="hint_not_support_bluetooth">该设备不支持蓝牙功能！</string>

    <!--ProfileActivity-->
    <string name="profile_portrait_str_tv">头像</string>
    <string name="profile_nickname_str_tv">昵称</string>
    <string name="profile_email_str_tv">Email</string>
    <string name="profile_brand_str_tv">爱车品牌</string>
    <string name="profile_brand_no_str_tv">爱车型号</string>
    <string name="exit_login_text">注&#160;&#160;&#160;&#160;&#160;&#160;销</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">一般</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">同步</string>
    <string name="pref_header_cancellation">注销</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
