<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_info_activity_tb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/appThemeColor"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/set_portrait_rl"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="5dp"
        android:onClick="onClick"
        android:background="@drawable/profile_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/profile_portrait_str_tv"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <com.jundger.carservice.widget.CircleImageView
            android:id="@+id/show_portrait_civ"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:src="@mipmap/app_portrait"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_profile_arrow"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/set_nickname_rl"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="5dp"
        android:onClick="onClick"
        android:background="@drawable/profile_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/profile_nickname_str_tv"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/show_nickname_tv"
            android:layout_width="wrap_content"
            android:text="@string/default_null_str"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_profile_arrow"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/set_email_rl"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="5dp"
        android:onClick="onClick"
        android:background="@drawable/profile_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/profile_email_str_tv"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/show_email_tv"
            android:layout_width="wrap_content"
            android:text="@string/default_null_str"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_profile_arrow"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="@drawable/profile_bg">
        <RelativeLayout
            android:id="@+id/set_brand_rl"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:layout_height="65dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/profile_brand_str_tv"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/show_brand_tv"
                android:layout_width="wrap_content"
                android:text="@string/default_null_str"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="40dp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_profile_arrow"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <RelativeLayout
            android:id="@+id/set_brand_no_rl"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:layout_height="65dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/profile_brand_no_str_tv"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/show_brand_no_tv"
                android:layout_width="wrap_content"
                android:text="@string/default_null_str"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="40dp"
                android:layout_marginEnd="40dp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_profile_arrow"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
